# ECO2

./: .gitignore  LICENSE  MiniLZO.csproj  README.md  environment.yml  prek.toml  pyproject.toml
ECO2/: MiniLZO.cs  __main__.py  cli.py  cx_setup.py  eco2.py  eco2data.py  minilzo.py  utils.py
eco/: MiniLZO.cs  __init__.py  __main__.py  cli.py  cx_setup.py  eco2.py  eco2data.py  eco2xml.py  minilzo.py  utils.py
eco2/: MiniLZO.cs  __init__.py  __main__.py  cli.py  cx_setup.py  eco2data.py  eco2xml.py  editor.py  minilzo.py  report.py  utils.py
eco2/core/: __init__.py  data.py  xml.py
eco2/data/: BatchReportMeta.csv
eco2/minilzo/: Program.cs  __init__.py  minilzo.py
scripts/: login.py
tests/: data.py  test_bin.py  test_cli.py  test_eco2.py  test_eco2data.py  test_editor.py  test_minilzo.py  test_report.py
tests/data/: ReportGraph.xls  ReportTotal.xls  ReportUpload.xls  batchreport.tab  test_ecl2.ECL2  test_eco.eco  test_ecox.ecox  test_tpl.tpl  test_tplx.tplx
