[project]
name            = "ECO2"
version         = "0.9.0"
description     = "효율등급인증 평가프로그램 ECO2, ECO2-OD 저장 파일 해석"
readme          = "README.md"
requires-python = ">=3.12"
dependencies    = ["cyclopts>=4.2.1", "lxml>=5.3.1", "rich>=13.9.4", "structlog>=25.5.0"]

[project.scripts]
eco2 = "eco2.cli:app.meta"

[dependency-groups]
dev       = [
  "cx-freeze>=8.3.0",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "pytest-sugar>=1.0.0",
  "pytest-xdist>=3.7.0",
  "ruff>=0.11.2",
  "ty>=0.0.21",
  "types-lxml>=2025.3.4",
]
dataframe = ["fastexcel>=0.16.0", "polars>=1.34.0"]
edit      = ["more-itertools>=10.8.0"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "if (typing\\.)?TYPE_CHECKING:",
  "except .*(\\n)?.*MiniLzo.*Error",
]

[tool.hatch.build.targets.wheel]
packages = ["eco2"]

[tool.mypy]
disable_error_code  = ["import-untyped", "import", "var-annotated"]
check_untyped_defs  = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.pytest]
addopts = ["--cov-report=html", "--cov=./", "--doctest-modules", "-v"]

[tool.ruff]
preview           = true
respect-gitignore = false
output-format     = "concise"

[tool.ruff.format]
quote-style           = "single"
docstring-code-format = true

[tool.ruff.lint]
select             = ["ALL"]
ignore             = [
  "COM",                      # flake8-commas
  "CPY",                      # flake8-copyright
  "D100",                     # pydocstyle: undocumented-public-module
  "FIX",                      # flake8-fixme
  "Q",                        # flake8-quotes
  "S101",                     # flake8-bandit: assert
]
extend-safe-fixes  = [
  "EM",                       # flake8-errmsg
  "PT",                       # flake8-pytest-style
  "TC",                       # flake8-type-checking
]
future-annotations = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN", "D"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
line-width                      = 120
trailing-comment-alignment      = true

[tool.ty.terminal]
output-format = "concise"

[tool.uv]
default-groups = "all"
